# iris

./: .gitignore  Makefile  TODO  dune-project  iris.opam
lib/: CmdArgs.ml  Interference.ml  Liveness.ml  Mir.ml  Opt.ml  RegAlloc.ml  dune
lib/backend/: Backend.ml  InsertSpillsPass.ml  InstselCommon.ml  LoadParamsPass.ml  LowerCallsPass.ml  MirBuilder.ml  MirPassUtils.ml  NaiveSpillerPass.ml  PrologEpilogPass.ml  RewriteVRegs.ml  RewriteVRegsPass.ml  SpillerPass.ml
lib/backend/cpulm/: CPUlmEmit.ml  CPUlmInstsel.ml  CPUlmMir.ml  CPUlmRegs.ml
lib/backend/x86/: X86Emit.ml  X86Instsel.ml  X86Mir.ml  X86MrBuilder.ml  X86Regs.ml
lib/ir/: BasicBlock.ml  CFG.ml  Instruction.ml  Ir.ml  IrBuilder.ml  IrPP.ml  IrPrettyPrinter.ml  PPrintIr.ml  README.md  Terminator.ml  UniqueId.ml
lib/ir/pass/: CopyPropagationPass.ml  DCEPass.ml  InstCombinePass.ml  LowerPhiPass.ml  LowerSwitchPass.ml  MergeRetPass.ml  SimplifyCFGPass.ml  VerifyPass.ml
lib/mr/: Interference.ml  Liveness.ml  Mr.ml  PPrintMr.ml  README.md  RegAlloc.ml
lib/mr/pass/: MrLoadParamsPass.ml  MrLoadParamsPass.mli  MrLowerCallsPass.ml  MrLowerCallsPass.mli  MrNaiveSpillerPass.ml  MrPass.ml  (+6 more)
lib/pass/: AnalysisManager.ml  CallGraph.ml  CopyPropagationPass.ml  DCEPass.ml  InstCombinePass.ml  IsolateRetPass.ml  LowerPhiPass.ml  MergeRetPass.ml  PassManager.ml  SimplifyCFGPass.ml  VerifyPass.ml
test/: ack.v  and_or.v  bug0001.v  call_in_arg.v  cmp.v  div.out  div.v  fact.v  fib.out  fib.v  if_else.v  many_adds.v  ops.out  ops.v  test.sh
violet/: Ast.ml  Compile.ml  Lexer.mll  Parser.mly  dune  violet.ml
