opam-version: "2.0"
name: "iris"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Hubert Gruniaux <hubert@gruniaux.com>"
authors: "Hubert Gruniaux <hubert@gruniaux.com>"
license: ""
homepage: "https://github.com/hgruniaux/iris"
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "menhir" ]
build: [[make]]
